--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ package-lock.json
 # Environment variables
 .env
 
+# Firebase service account (sensitive)
+src/config/firebase-service-account.json
+
 # Logs
 logs/
 *.log
