--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ package-lock.json
 
 # Firebase service account (sensitive)
 src/config/firebase-service-account.json
+firebase-service-account.json
 
 # Logs
 logs/
